syntax = "proto3";

package cloud.lazycat.apis;

option go_package = "/gateway";

import "google/protobuf/empty.proto";

service APIGateway {
  rpc QueryGatewayInfo(google.protobuf.Empty) returns (GatewayInfo) {}
  rpc RegisterGRPCService(GRPCServiceInfo) returns (RegisterReply) {}
}

message GatewayInfo {
  // 域名信息
  string base_domain = 1;

  // 服务端口
  string port = 2;

  // 是否使用TLS
  bool is_tls = 3;
}

message GRPCServiceInfo {
  string service_name = 1;
  string backend_addr = 2;
}

message RegisterReply {
  bool is_ok = 1;
  string error_message = 2;
}